Fix menu styling and closing by blurring

--- a/src/components/menu/_menu.scss
+++ b/src/components/menu/_menu.scss
@@ -62,9 +62,13 @@
   margin-right: govuk-spacing(2);
   margin-bottom: govuk-spacing(2);
   width: auto; // Override GDS’s 100% width
-
   &:last-child {
     margin-right: 0;
+  }
+  &:link,
+  &:visited {
+    text-decoration: none;
+    color:  govuk-colour("black");
   }
 }
 
